Update description and version

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "name": "Markdown to HTML",
-  "description" : "Simple Markdown to HTML Live editor.",
-  "version": "1.0",
+  "description" : "Simple Markdown to HTML editor.\n\nThanks to Christopher Jeffrey (https://github.com/chjj/) as it makes use of his Marked parser.",
+  "version": "1.1",
   "minimum_chrome_version": "23",
   "icons": {
     "16": "img/icon_16.png",
